updated model testing

--- a/src/SMOTE.ipynb
+++ b/src/SMOTE.ipynb
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9568798240696822\n"
+      "0.9575697468845673\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9866726545060693"
+       "0.9864811317016471"
       ]
      },
      "execution_count": 3,
@@ -109,6 +109,32 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2098cf6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.98      0.96      0.97     18923\n",
+      "         1.0       0.85      0.93      0.89      4268\n",
+      "\n",
+      "    accuracy                           0.96     23191\n",
+      "   macro avg       0.92      0.95      0.93     23191\n",
+      "weighted avg       0.96      0.96      0.96     23191\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, knn.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "a589c147",
    "metadata": {},
    "outputs": [],
@@ -120,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e5394f11",
    "metadata": {},
    "outputs": [
@@ -144,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fb246012",
    "metadata": {},
    "outputs": [
@@ -152,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.725238238972015\n"
+      "0.725108878444224\n"
      ]
     }
    ],
@@ -167,7 +193,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "0ada9ba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.91      0.73      0.81     18923\n",
+      "         1.0       0.37      0.68      0.48      4268\n",
+      "\n",
+      "    accuracy                           0.73     23191\n",
+      "   macro avg       0.64      0.71      0.65     23191\n",
+      "weighted avg       0.81      0.73      0.75     23191\n",
+      "\n",
+      "0.7145187494221295\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, lr.predict(X_test)))\n",
+    "print(lr.score(X_sm, y_sm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "2cd28e72",
    "metadata": {},
    "outputs": [],
