--- a/src/decision_tree.ipynb
+++ b/src/decision_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "266116e1",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,7 @@
     "from imblearn.ensemble import EasyEnsembleClassifier\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
     "from imblearn.under_sampling import ClusterCentroids\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "\n",
     "mitbih_test = data_load_data.load_dataframe(\"test\")\n",
@@ -58,17 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "18033a87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9265242763101158"
+       "0.9260920184554353"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3158b6a9",
    "metadata": {},
    "outputs": [
@@ -93,7 +94,7 @@
        "1.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,35 +107,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "8abebae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.96      0.95      0.95     18923\n",
+      "         1.0       0.79      0.81      0.80      4268\n",
+      "\n",
+      "    accuracy                           0.93     23191\n",
+      "   macro avg       0.88      0.88      0.88     23191\n",
+      "weighted avg       0.93      0.93      0.93     23191\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, dtc.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "ff039418",
    "metadata": {},
    "outputs": [],
    "source": [
     "#probable overfitting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "591f5c09",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.9215644 , 0.93773447, 0.93040404, 0.91384589, 0.84614721])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#check cross validation\n",
-    "\n",
-    "cross_val_score(dtc, X, y, cv=5)"
    ]
   }
  ],
