--- a/src/easy_ensemble_classifier.ipynb
+++ b/src/easy_ensemble_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "60dee650",
    "metadata": {},
    "outputs": [],
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f76ebdf3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7615885472812729"
+       "0.7665904876891898"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "369f56ea",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[14787  4136]\n",
+      "[[14903  4020]\n",
       " [ 1393  2875]]\n"
      ]
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "968ddc3c",
    "metadata": {},
    "outputs": [
@@ -115,10 +115,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "        0.0       0.91      0.78      0.67      0.84      0.73      0.53     18923\n",
-      "        1.0       0.41      0.67      0.78      0.51      0.73      0.52      4268\n",
+      "        0.0       0.91      0.79      0.67      0.85      0.73      0.54     18923\n",
+      "        1.0       0.42      0.67      0.79      0.52      0.73      0.52      4268\n",
       "\n",
-      "avg / total       0.82      0.76      0.69      0.78      0.73      0.53     23191\n",
+      "avg / total       0.82      0.77      0.69      0.79      0.73      0.53     23191\n",
       "\n"
      ]
     }
@@ -127,6 +127,24 @@
     "#classification report\n",
     "\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "afbe869a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7664503471174162\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(eec.score(X_train, y_train))"
    ]
   }
  ],
