--- a/src/knn.ipynb
+++ b/src/knn.ipynb
@@ -96,7 +96,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "b25501b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.98      0.99      0.98     18923\n",
+      "         1.0       0.93      0.90      0.91      4268\n",
+      "\n",
+      "    accuracy                           0.97     23191\n",
+      "   macro avg       0.95      0.94      0.95     23191\n",
+      "weighted avg       0.97      0.97      0.97     23191\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, knn.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "d2d4d9ca",
    "metadata": {},
    "outputs": [],
