--- a/src/logistic_regression.ipynb
+++ b/src/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "108fc5ae",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3c6baaaa",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e16cc1c",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8ec6cc90",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "0.8404984692337545"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,17 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3e8b4006",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7275128282523393"
+       "0.8392695442197404"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,17 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7b562d0d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7273511275926006"
+       "0.7259712819628305"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,14 +183,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "9f115521",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.91      0.74      0.81     18923\n",
+      "         1.0       0.37      0.68      0.48      4268\n",
+      "\n",
+      "    accuracy                           0.73     23191\n",
+      "   macro avg       0.64      0.71      0.65     23191\n",
+      "weighted avg       0.81      0.73      0.75     23191\n",
+      "\n",
+      "0.7279116898796947\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, lr.predict(X_test)))\n",
+    "print(lr.score(X_train, y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "c0a228f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7247207968608512"
+       "0.7245914363330602"
       ]
      },
      "execution_count": 8,
@@ -205,6 +233,34 @@
     "X_ru, y_ru = ru.fit_resample(X_train, y_train)\n",
     "lr.fit(X_ru, y_ru)\n",
     "lr.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "166303ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.91      0.74      0.81     18923\n",
+      "         1.0       0.37      0.67      0.47      4268\n",
+      "\n",
+      "    accuracy                           0.72     23191\n",
+      "   macro avg       0.64      0.70      0.64     23191\n",
+      "weighted avg       0.81      0.72      0.75     23191\n",
+      "\n",
+      "0.724957957828468\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, lr.predict(X_test)))\n",
+    "print(lr.score(X_train, y_train))"
    ]
   }
  ],
