--- a/src/random_forest.ipynb
+++ b/src/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "54f4bc1b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aa10b456",
    "metadata": {},
    "outputs": [
@@ -95,13 +95,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0.0</th>\n",
-       "      <td>18912</td>\n",
-       "      <td>68</td>\n",
+       "      <td>18861</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1.0</th>\n",
-       "      <td>850</td>\n",
-       "      <td>3361</td>\n",
+       "      <td>827</td>\n",
+       "      <td>3441</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -110,11 +110,11 @@
       "text/plain": [
        "col_0    0.0   1.0\n",
        "187               \n",
-       "0.0    18912    68\n",
-       "1.0      850  3361"
+       "0.0    18861    62\n",
+       "1.0      827  3441"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a0bcc430",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9604156784959683\n"
+      "0.9616661635979474\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8dfd05e9",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "b97f54a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.96      1.00      0.98     18923\n",
+      "         1.0       0.98      0.81      0.89      4268\n",
+      "\n",
+      "    accuracy                           0.96     23191\n",
+      "   macro avg       0.97      0.90      0.93     23191\n",
+      "weighted avg       0.96      0.96      0.96     23191\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "1cf8e346",
    "metadata": {},
    "outputs": [],
