added new model testing

--- a/src/SMOTE.ipynb
+++ b/src/SMOTE.ipynb
@@ -228,6 +228,50 @@
    "source": [
     "#performs worse than lr model on non-resampled dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a461bdb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9739122935621577\n",
+      "1.0\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.98      0.99      0.98     18923\n",
+      "         1.0       0.94      0.92      0.93      4268\n",
+      "\n",
+      "    accuracy                           0.97     23191\n",
+      "   macro avg       0.96      0.95      0.96     23191\n",
+      "weighted avg       0.97      0.97      0.97     23191\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create random forest classifier and evaluate on SMOTE resampled data\n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_sm, y_sm)\n",
+    "print(rf.score(X_test, y_test))\n",
+    "print(rf.score(X_sm, y_sm))\n",
+    "print(classification_report(y_test, rf.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c72288e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#random forest classifier with SMOTE still overfits, shown by the impossible perfect score when evaluated on the training data"
+   ]
   }
  ],
  "metadata": {
