--- a/src/random_forest.ipynb
+++ b/src/random_forest.ipynb
@@ -202,6 +202,98 @@
    "source": [
     "#probable overfitting"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "67b7b1c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9700314777284291\n",
+      "1.0\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.97      0.99      0.98     18923\n",
+      "         1.0       0.97      0.87      0.91      4268\n",
+      "\n",
+      "    accuracy                           0.97     23191\n",
+      "   macro avg       0.97      0.93      0.95     23191\n",
+      "weighted avg       0.97      0.97      0.97     23191\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluate on random oversampler resample\n",
+    "\n",
+    "ro = RandomOverSampler()\n",
+    "X_ro, y_ro = ro.fit_resample(X_train, y_train)\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_ro, y_ro)\n",
+    "print(rf.score(X_test, y_test))\n",
+    "print(rf.score(X_ro, y_ro))\n",
+    "print(classification_report(y_test, rf.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d54f689c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#no improvement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "35823437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9500237160967617\n",
+      "1.0\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.99      0.95      0.97     18923\n",
+      "         1.0       0.81      0.94      0.87      4268\n",
+      "\n",
+      "    accuracy                           0.95     23191\n",
+      "   macro avg       0.90      0.95      0.92     23191\n",
+      "weighted avg       0.95      0.95      0.95     23191\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluate on random undersampler resample\n",
+    "\n",
+    "ru = RandomUnderSampler()\n",
+    "X_ru, y_ru = ru.fit_resample(X_train, y_train)\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_ru, y_ru)\n",
+    "print(rf.score(X_test, y_test))\n",
+    "print(rf.score(X_ru, y_ru))\n",
+    "print(classification_report(y_test, rf.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4919cd80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#no improvement"
+   ]
   }
  ],
  "metadata": {
